--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "url": "git://github.com/auralia/node-nsweb.git"
   },
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-typedoc": "^2.0.1",
-    "gulp-typescript": "^3.1.3",
+    "gulp-sourcemaps": "^2.3.1",
+    "gulp-typedoc": "^2.0.2",
+    "gulp-typescript": "^3.1.4",
     "merge2": "^1.0.3",
     "typedoc": "^0.5.3",
-    "typescript": "^2.1.4"
+    "typescript": "^2.1.5"
   },
   "dependencies": {
-    "@types/node": "^6.0.57"
+    "@types/node": "^7.0.0"
   }
 }
