--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "declaration": true,
     "lib": [
-      "dom",
       "es5",
       "es2015.promise"
     ],
@@ -13,8 +12,11 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "strictNullChecks": true,
-    "target": "es5"
+    "strict": true,
+    "target": "es5",
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "src/*"
